cmd/kubetype-gen/testdata/test_input/positive/defaults/doc.go
// Package defaults is for test
// +kubetype-gen:package=success/defaults
// +kubetype-gen:groupVersion=group/version
package defaults
