cmd/kubetype-gen/testdata/test_input/negative/defaults/invalidgroupversion/doc.go
// Package invalidgroupversion is for test
// test should fail because the group/version is invalid (schema.ParseGroupVersion() error)
// +kubetype-gen:groupVersion=group/version/version
package invalidgroupversion
